versioned_docs/version-3.13.0/guides/built-ins/functions/hasAnnotation/index.mdx
import CodeBlock from "@theme/CodeBlock";
import Example from "!!raw-loader!./example.yml";

**Description**:

Verifies if the patch contains a symbol with the provided annotation, returning `true` or `false` as appropriate.

**Available for:**

| Type           | Available |
| :------------- | :-------- |
| `issue`        | ❌        |
| `pull_request` | ✅        |

**Parameters**:

| Parameter    | Type   | Description                              |
| :----------- | :----- | :--------------------------------------- |
| `annotation` | string | The annotation to look for in the patch. |

**Return value**:

| Type      | Description                                                                           |
| :-------- | :------------------------------------------------------------------------------------ |
| `boolean` | `true` if the patch changes a symbol with the provided annotation, `false` otherwise. |

**Examples**:

```yml
$hasAnnotation("critical")
```

A `reviewpad.yml` example:

<CodeBlock language="yml">{Example}</CodeBlock>
