versioned_docs/version-3.16.0/guides/built-ins/functions/hasAnnotation/index.mdx
import CodeBlock from "@theme/CodeBlock";
import Example from "!!raw-loader!./example.yml";

**Description**:

Verifies if the patch contains a symbol with the provided annotation, returning `true` or `false` as appropriate.

:::info INFO

Please note that for this to work a symbol must be annotated with the `@reviewpad-ann <annotation>` annotation.

For more information annotations, please see [this page](/guides/annotations).

:::

**Available for:**

| Type           | Available |
| :------------- | :-------- |
| `issue`        | ❌        |
| `pull_request` | ✅        |

**Parameters**:

| Parameter    | Type   | Description                              |
| :----------- | :----- | :--------------------------------------- |
| `annotation` | string | The annotation to look for in the patch. |

**Return value**:

| Type      | Description                                                                           |
| :-------- | :------------------------------------------------------------------------------------ |
| `boolean` | `true` if the patch changes a symbol with the provided annotation, `false` otherwise. |

**Examples**:

```yml
$hasAnnotation("critical")
```

A `reviewpad.yml` example:

<CodeBlock language="yml">{Example}</CodeBlock>
